# project_chat

./: .gitignore  README.md
components/our_project_backend/: README.md  pyproject.toml  setup.cfg
components/our_project_backend/simple_chat/adapters/chat_api/: __init__.py  app.py  auth.py  controllers.py  join_points.py  settings.py
components/our_project_backend/simple_chat/adapters/database/: __init__.py  mapping.py  repositories.py  settings.py  tables.py
components/our_project_backend/simple_chat/application/: dataclasses.py  errors.py  interfaces.py  services.py
components/our_project_backend/simple_chat/composites/: chat_api.py  shop_api.py
components/our_project_backend/tests/: conftest.py
components/our_project_backend/tests/integration/adapters/: conftest.py
components/our_project_backend/tests/integration/adapters/database/: conftest.py
components/our_project_backend/tests/unit/application/: conftest.py
components/our_project_backend/tests/unit/application/services/: test_authorization.py  test_chat_manager.py  test_message.py
docs/: Chat EndPoints.postman_collection.json  db_scheme.puml  precedents.puml
