[metadata]
name = demo-project-chat
version = 1.0.0
description = Демо проект, построенный по чистой архитектуре
author = Kudryavtsev Denis
author_email = den-kyder@mail.ru
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
python_requires = ~=3.7.0

install_requires =
    attrs~=21.2.0
    PyJWT~=2.0.0
    pydantic~=1.8.2
    sqlalchemy~=1.4.23
    alembic~=1.7.0
    gunicorn~=20.0.0
    click~=7.1.0
    python-json-logger
    classic-components
    classic-aspects
    classic-app-layer
    classic-http-api
    classic-http-auth
    classic-sql-storage
    classic-messaging
    classic-messaging-kombu

[options.extras_require]
dev =
    pytest~=6.2.5
    pytest-cov~=2.12.1
    isort~=5.10.0
    yapf~=0.32.0

[options.entry_points]
console_scripts =
    simple_shop=simple_shop.composites.cli:cli